--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+streamlit==1.22.0
 sqlalchemy==2.0.23
+werkzeug==3.0.1
+pillow==10.1.0
 python-dotenv==1.0.0
-psycopg2-binary==2.9.9  # o el conector para tu BD
+pymupdf==1.23.5
